apps/dagobah/configs/vaultwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-http"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vault.dagobah.txit.me
      secretName: vaultwarden-tls
  rules:
    - host: vault.dagobah.txit.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden-application
                port:
                  number: 80
